# onsagernet-jax

./: .env  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docs/: index.html  onsagernet.html  search.js
docs/onsagernet/: _activations.html  _layers.html  _losses.html  _utils.html  dynamics.html  models.html  trainers.html  transformations.html
examples/n_scale_potential/: README.md  n_scale_potential.py  n_scale_potential_analysis.ipynb
examples/n_scale_potential/config/: n_scale_potential.yaml
examples/polymer_dynamics/: README.md  polymer_dynamics.py  polymer_dynamics_analysis.ipynb
examples/polymer_dynamics/config/: polymer_dynamics.yaml
examples/test_case/: README.md  test_case.py  test_case_analysis.ipynb
examples/test_case/config/: test_case.yaml
examples/utils/: data.py  sde.py
onsagernet/: __init__.py  _activations.py  _layers.py  _losses.py  _utils.py  dynamics.py  models.py  trainers.py  transformations.py
tests/: __init__.py  test_activations.py  test_layers.py  test_losses.py  test_models.py  test_trainers.py
